--- a/glide.yaml
+++ b/glide.yaml
@@ -4,3 +4,5 @@ import:
   version: ~4.0.0-preview1
 - package: github.com/gin-gonic/gin
   version: ~1.5.0
+- package: github.com/joho/godotenv
+  version: ~1.3.0
